准备修改导航栏

--- a/index.html
+++ b/index.html
@@ -1,11 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>品优购</title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
+
 <body>
-    
+    <!-- 快捷导航栏 -->
+    <section class="shortcut font_size">
+        <div class="w">
+            <div class="fl">
+                <ul>
+                    <li>品优购欢迎您！&nbsp;</li>
+                    <li>
+                        <a href="#">请登录</a>&nbsp;
+                        <a href="#" class="frc">免费注册</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="fr">
+                <ul>
+                    <li><a href="#">我的订单</a></li>
+                    <li><a href="#" class="arrow-icon">我的品优购</a></li>
+                    <li><a href="#">品优购会员</a></li>
+                    <li><a href="#">企业采购</a></li>
+                    <li><a href="#" class="arrow-icon">关注品优购</a></li>
+                    <li><a href="#" class="arrow-icon">客户服务</a></li>
+                    <li><a href="#" class="arrow-icon">网站导航</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </section>
+    <header class="w f_head">
+        <div class="logo">
+            <h1>
+                <a href="index.html" title="品优购商城">品优购购物</a>
+            </h1>
+        </div>
+        <form action="">
+            <input type="search" name="search" placeholder="语言开发">
+            <input type="submit" value="搜索">
+        </form>
+        <ul>
+            <li><a href="#" style="color: red;">优惠购首发</a></li>
+            <li><a href="#">亿元优惠</a></li>
+            <li><a href="#">9.9元团购</a></li>
+            <li><a href="#">美满99减33</a></li>
+            <li><a href="#">办公用品</a></li>
+            <li><a href="#">电脑</a></li>
+            <li><a href="#">通信</a></li>
+        </ul>
+        <div>
+            <a href="#">我的购物车</a>
+            <i class="count">80</i>
+        </div>
+    </header>
+    <nav class="nav">
+        <div class="w">
+            <h2>全部商品分类</h2>
+            <ul>
+                <li><a href="#">服装城</a></li>
+                <li><a href="#">美妆款</a></li>
+                <li><a href="#">传智超市</a></li>
+                <li><a href="#">全球购</a></li>
+                <li><a href="#">闪购</a></li>
+                <li><a href="#">团购</a></li>
+                <li><a href="#">拍卖</a></li>
+                <li><a href="#">有趣</a></li>
+            </ul>
+        </div>
+    </nav>
+    <nav class="w nav2">
+        <div class="fl">
+            <ul>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+                <li><a href="#">阿里撸啊</a></li>
+            </ul>
+
+        </div>
+        <div class="fl advertise">
+            <img src="./images/图层179.png" alt="无法加载图片">
+        </div>
+        <div class="fr post">
+            <div>
+                <h2>评优购快报</h2>
+                <a href="#">更多</a>
+            </div>
+            <ul>
+                <li><a href="">欢迎来到的来联盟</a></li>
+                <li><a href="">欢迎来到的来联盟</a></li>
+                <li><a href="">欢迎来到的来联盟</a></li>
+                <li><a href="">欢迎来到的来联盟</a></li>
+                <li><a href="">欢迎来到的来联盟</a></li>
+            </ul>
+            <section class="fl">
+                <table></table>
+            </section>
+        </div>
+    </nav>
 </body>
+
 </html>
