--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
     </header>
     <nav class="nav">
         <div class="w">
-            <h2>全部商品分类</h2>
+            <div class="fl">
+                <h2>全部商品分类</h2>
+                <ul class="links">
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                    <li><a href="#">阿里撸啊</a></li>
+                </ul>
+
+            </div>
             <ul>
                 <li><a href="#">服装城</a></li>
                 <li><a href="#">美妆款</a></li>
@@ -78,26 +98,7 @@
         </div>
     </nav>
     <nav class="w nav2">
-        <div class="fl">
-            <ul>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-                <li><a href="#">阿里撸啊</a></li>
-            </ul>
 
-        </div>
         <div class="fl advertise">
             <img src="./images/图层179.png" alt="无法加载图片">
         </div>
@@ -118,6 +119,106 @@
             </section>
         </div>
     </nav>
+
+    <footer class="footer">
+
+        <div class="w">
+            <ul class="describe">
+                <div>
+                    <span></span>
+                    <dt>正品保障</dt>
+                    <dd>正品保障，提供发票</dd>
+                </div>
+                <div>
+                    <span></span>
+                    <dt>急速物流</dt>
+                    <dd>急速物流，急速送达</dd>
+                </div>
+                <div>
+                    <span></span>
+                    <dt>无忧售后</dt>
+                    <dd>七天无理由退换货</dd>
+                </div>
+                <div>
+                    <span></span>
+                    <dt>特色服务</dt>
+                    <dd>私人定制家电套餐</dd>
+                </div>
+                <div>
+                    <span></span>
+                    <dt>帮助中心</dt>
+                    <dd>您的购物指南</dd>
+                </div>
+            </ul>
+
+            <div class="recom">
+                <ul>
+                    <div>
+                        <dt>购物指南</dt>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                    </div>
+                    <div>
+                        <dt>露露啦露露</dt>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                    </div>
+                    <div>
+                        <dt>露露啦露露</dt>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                        <dd>露露啦露露</dd>
+                    </div>
+                    <div>
+                        <dt>露露啦露露啦</dt>
+                        <dd>露露啦露露啦</dd>
+                        <dd>露露啦露露啦</dd>
+                        <dd>露露啦露露啦</dd>
+                        <dd>露露啦露露啦</dd>
+                        <dd>露露啦露露啦</dd>
+                    </div>
+                    <div>
+                        <dt>露露啦</dt>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                        <dd>露露啦</dd>
+                    </div>
+                    <div>
+                        <dt>帮助中心</dt>
+                        <dd>
+                            <img src="./images/wx_cz.jpg" alt="">帮助中心
+                        </dd>
+                    </div>
+                </ul>
+            </div>
+            <div class="ft_about">
+                <ul>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                    <li><a href="#">的说法</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
