首页结构完成

--- a/index.html
+++ b/index.html
@@ -141,6 +141,160 @@
         </div>
     </nav>
 
+    <section class="recommend w">
+        <div>
+            <a href="#">
+                <h3></h3>
+                <p></p>
+                <p></p>
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <h3>优质好货</h3>
+                <p>满三百减一百</p>
+                <p>满五百减二百</p>
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <h3></h3>
+                <p></p>
+                <p></p>
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <h3></h3>
+                <p></p>
+                <p></p>
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <h3></h3>
+                <p></p>
+                <p></p>
+            </a>
+        </div>
+    </section>
+
+    <section class="guess w">
+        <div>
+            <h3>猜你喜欢</h3>
+            <button>换一批</button>
+        </div>
+
+        <ul>
+            <li>
+                <div>
+
+                </div>
+            </li>
+            <li>
+                <div>
+
+                </div>
+            </li>
+            <li>
+                <div>
+
+                </div>
+            </li>
+            <li>
+                <div>
+
+                </div>
+            </li>
+            <li>
+                <div>
+
+                </div>
+            </li>
+            <li>
+                <div>
+
+                </div>
+            </li>
+        </ul>
+
+    </section>
+
+
+
+    <section class="fun clearfix w">
+        <div class="fl">
+        </div>
+        <div class="goodthing fl">
+            <h3>好东西</h3>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <div class="brandstreet fl">
+            <h3>品牌街</h3>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="fl">
+
+        </div>
+    </section>
+
+    <main>
+        <section class="phone w">
+            <div class="phone_top">
+                <h3 class="fl">手机通讯</h3>
+                <ul class="fr">
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">电脑</a></li>
+                </ul>
+            </div>
+            <div class="phone_down clearfix">
+                <div>
+                    <ul class="clearfix">
+                        <li><a href="#">手机通讯</a></li>
+                        <li><a href="#">手机通讯</a></li>
+                        <li><a href="#">手机通讯</a></li>
+                        <li><a href="#">手机通讯</a></li>
+                        <li><a href="#">手机通讯</a></li>
+                        <li><a href="#">手机通讯</a></li>
+                    </ul>
+                    <a href="#">
+                        <img src="" alt="">
+                    </a>
+                </div>
+                <div>
+
+                </div>
+                <div>
+                        <a href="">
+
+                    </a>
+                    <a href="">
+
+                    </a>
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+
+            </div>
+        </section>
+    </main>
+
+
     <footer class="footer">
 
         <div class="w">
